@@ -1,6 +1,6 @@
 package sample.pokedex.restapi.pokemon.dto;
 
-import sample.pokedex.restapi.pokeclient.dto.PokeDetail;
+import sample.pokedex.restapi.pokeclient.dto.*;
 
 import java.util.Arrays;
 import java.util.List;
@@ -12,19 +12,48 @@ public record PokemonDto(
         String imageUrl,
         List<TypeDto> types,
         Integer weight,
-        List<AbilityDto> abilities
-) {
-    public static PokemonDto from(PokeDetail from) {
+        List<AbilityDto> abilities,
+        String description,
+        List<PokemonDto> evolutions) {
+    public static PokemonDto from(PokeDetail detail) {
+        return from(detail, null, null);
+    }
+
+    public static PokemonDto from(
+            PokeDetail detail,
+            PokeSpecimen specimen,
+            PokeChain evolutions) {
         return new PokemonDto(
-                from.id(),
-                from.name(),
-                from.sprites().frontDefault(),
-                Arrays.stream(from.types())
+                detail.id(),
+                detail.name(),
+                detail.sprites().frontDefault(),
+                Arrays.stream(detail.types())
                         .map(TypeDto::from)
-                        .collect(Collectors.toList()),
-                from.weight(),
-                Arrays.stream(from.abilities())
+                        .toList(),
+                detail.weight(),
+                Arrays.stream(detail.abilities())
                         .map(AbilityDto::from)
-                        .collect(Collectors.toList()));
+                        .toList(),
+                specimen == null ? null : specimen.getDescription(),
+                evolutions != null
+                        ? evolutions.chain() != null
+                        ? Arrays
+                        .stream(evolutions.chain().evolvesTo())
+                        .map(PokemonDto::from)
+                        .toList() : null : null);
+    }
+
+    public static PokemonDto from(PokeChainElement chain) {
+        return new PokemonDto(
+                chain.species().extractId(),
+                chain.species().name(),
+                null,
+                null,
+                null,
+                null,
+                null,
+                Arrays.stream(chain.evolvesTo())
+                        .map(PokemonDto::from)
+                        .toList());
     }
 }
